fix(ticket): missing word wrap for unformatted code snippets, should fix https://github.com/leancloud/saas-ticket/issues/379

--- a/modules/Ticket.css
+++ b/modules/Ticket.css
@@ -7,7 +7,13 @@
 }
 
 .content {
+  /*
+    some user generated content contains unformatted code snippets, i have to
+    foruce word break for all these content
 
+    demo: http://localhost:3000/tickets/13164
+  */
+  overflow-wrap: break-word;
 }
 
 .content > div > *:last-child {
